--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,26 @@
 <div class="jumbotron center">
-	<h1>Welcome to FB Page Management</h1>
-	Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary" %>
+	<h1>We are</h1>
+	<h1>The Facebook Page Experts</h1>
+</br>
+	<h2> <%= link_to "Sign Up Your Page Now", "#", class: "btn-lg btn-success" %></h2>
+</br>
+	<h4 class="text-muted">Exclusively for pages with 1,000,000+ fans</h4>
+
+
 </div>
+
+<div class="row">
+        <div class="col-lg-4">
+          <h2 class="cloudtext">Grow Your Fans</h2>
+          <p>Our team of social media experts uses best practices learned by managing hundreds of Facebook pages with millions and millions of fans to increase your audience. We will optimize your page.</p>
+        </div>
+        <div class="col-lg-4">
+          <h2 class="cloudtext">Increase Your Likes</h2>
+          <p>We post unique compelling content at the right time that we know will drive more engagement on your Facebook page. This increases the chances that your fans will see your post, increasing your reach.</p>
+       </div>
+        <div class="col-lg-4">
+          <h2 class="cloudtext">Save Your Time</h2>
+          <p>Managing a Facebook page takes a lot of work, and growing it is even harder. It's our job and we do it well. Why waste your time when we can grow your page as fast as possible? Let us do the tough daily work.</p>
+        </div>
+      </div>
+
