--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,10 @@
 <div class="jumbotron center">
-	<h1>We are</h1>
-	<h1>The Facebook Page Experts</h1>
+	<h1>The Facebook Page</h1> 
+	<h1>Experts</h1>
 </br>
-	<h2> <%= link_to "Sign Up Your Page Now", "#", class: "btn-lg btn-success" %></h2>
+	<h2> <%= link_to "Grow Your Page Now", new_user_registration_path, class: "btn-lg btn-success" %></h2>
 </br>
-	<h4 class="text-muted">Exclusively for pages with 1,000,000+ fans</h4>
+	<h4 class="text-muted">Exclusively for pages with 500,000+ fans</h4>
 
 
 </div>
