--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">ELITE PAGE MANAGEMENT</a>
+    <a class="navbar-brand" href="#">ELITE PAGE MANAGEMENT &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;supersize your page</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
