--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,6 +9,11 @@
       <%= devise_error_messages! %>
 
       <div class="form-group">
+    <%= f.label :your_facebook_page_name_and_url %>
+    <%= f.text_field :name, :autofocus => true, class: "form-control" %>
+  </div>
+
+      <div class="form-group">
         <%= f.label :email %>
         <%= f.email_field :email, class: "form-control", :autofocus => true %>
       </div>
