--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,8 +8,13 @@
       <%= devise_error_messages! %>
 
       <div class="form-group">
+    <%= f.label :your_facebook_page_name_and_url %>
+    <%= f.text_field :name, :autofocus => true, class: "form-control" %>
+  </div>
+
+      <div class="form-group">
         <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true, class: "form-control" %>
+        <%= f.email_field :email, class: "form-control" %>
       </div>
 
       <div class="form-group">
